exact match first

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-NEO4J_URI=<URI>
-NEO4J_USERNAME=<USERNAME>
-NEO4J_PASSWORD=<PASSWORD>
+NEO4J_URI=neo4j+s://a92fec95.databases.neo4j.io
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=_J7bDeOvKBB0xEb8u_PhxenyPMSm-SMcMIVgPxiR4_8
